# recall-memory-hermes

./: README.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: publish.yml
src/recall_memory_hermes/: __init__.py
src/recall_memory_hermes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
