[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-memory-hermes"
version = "0.2.0"
description = "Hermes Agent memory provider plugin for recall-sqlite (SAG-based, tiered storage)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "recall-sqlite>=0.2.0",
    "httpx>=0.27.0",
]

[project.urls]
homepage = "https://github.com/Jnocode/recall-memory-hermes"
repository = "https://github.com/Jnocode/recall-memory-hermes"

[tool.setuptools.packages.find]
where = ["src"]
